Este es un proyecto real de html con css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Mi primer sitio web</title>
 </head>
 <body>
-    <h1>hola mundo</h1>
+    <h1>Aqui vamos a hacer mi primer sitio</h1>
+    <p class="primer-parrafo">Y este sera el parrafo del inicio</p>
+    <p>Este es el segundo parrafo</p>
 </body>
 </html>
