Maquetando el header

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Mi primer sitio web</title>
+    <title>Mi primer sitio</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer mi primer sitio</h1>
-    <p class="primer-parrafo">Y este sera el parrafo del inicio</p>
-    <p>Este es el segundo parrafo</p>
+    <header>
+        <p>logo</p>
+        <nav>
+            <ul>
+                <li>item 1</li>
+                <li>item 2</li>
+                <li>item 3</li>
+            </ul>
+        </nav>
+    </header>
+    <h1>Sitio en construccion</h1>
+    <p>Copyrigth @Derechos reservados 2023</p>
 </body>
+
 </html>
