--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <p>logo</p>
+        <img src="./assets/logo.png" alt="logo Escuela Mmilitar De Ingenieria"> 
         <nav>
             <ul>
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
+                <li>Estudiantes</li>
+                <li>Docentes</li>
+                <li>Proyectos</li>
+                <li>Biblioteca</li>
             </ul>
         </nav>
     </header>
